[FIX] 4 files - Long comments are now collapsed after page is loaded, and changed way to collapse it

--- a/src/styles/comments.css
+++ b/src/styles/comments.css
@@ -95,13 +95,15 @@
     display: flex;
 }
 .comment-text {
-    overflow-y: hidden;
     width: 100%;
-    height: 4.5em;
     margin-bottom: .1em;
 }
 .comment-text-container {
     height: auto;
+}
+.comment-text-after {
+    height: 4.5em;
+    overflow-y: hidden;    
 }
 .comment-text-more {
     height: 100%;
